feat(TAP-12037): DuckDB nodes support multiple merge scenarios, and we need to change 'use the primary key of the main table as the primary key of the wide table' to 'use join key as the joint index of the wide table'